--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier-format && npm run lint",
+      "pre-commit": "",
       "pre-push": ""
     }
   },
