--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./build && tsc",
+    "build:dev": "rimraf ./build && tsc --watch",
+    "debug:node": "node --inspect-brk build/index.js",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "start": "npm run build && node build/index.js",
+    "start": "node build/index.js",
     "start:dev": "nodemon"
   },
   "husky": {
@@ -23,10 +25,11 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "node-cron": "^2.0.3",
-    "todoist-nodejs": "^0.3.1"
+    "todoist": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "@types/node-cron": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "eslint": "^7.7.0",
